--- a/scene/one/elephant-conservation-africa/index.html
+++ b/scene/one/elephant-conservation-africa/index.html
@@ -37,11 +37,13 @@
   <section>
     <article>
       <div>
-        <h4 class="letterhead thin">July 2014</h4>
+        <h4 class="letterhead thin">September 2014</h4>
         <h2 class="scene-one">Elephant Conservation in Africa</h2>
         <h5 class="author">Press secretary at Animat Habitat</h5>
 
-        <p class="linebreak"><em>On June 15th, wildlife filmmaker in Africa Mark Deeble submitted a final chapter for the story of <a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">Satao&mdash;a legend.</a> Thanks to Mark for sharing his account of the life and death of this magnificent bull elephant. Let the story of Satao be a chapter we learn from, and change the way we look at wildlife.</em></p>
+        <p class="linebreak"><em>On June 15th, wildlife filmmaker Mark Deeble submitted a final chapter for the story of <a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">Satao&mdash;a legend</a>. Thanks to Mark for sharing his account of the life and death of this magnificent bull elephant. Let the story of Satao be a chapter we learn from, and change the way we look at wildlife.</em></p>
+
+        <p class="linebreak"><em>From another continent, it is unfair to place a value on such a loss for Kenya and on such widespread biodiversity loss across Africa without also addressing the impact of pollutants emitted and wasted by the rest of the world. This article points to Satao as an ambassador for the crisis facing elephant conservation in Africa, but also to the ways the world can help create change from home.</em></p>
       </div>
 
       <img alt="" src="../../../inc/img/01/photograph/mark-deeble/2014.satao.bull-drinking.png" />
@@ -49,27 +51,41 @@
 
       <div>
         <h3>Change in Africa</h3>
-        <p>Massive pressure on natural habitats is fueling extreme climates and species loss. Human population and technological growth are creating a global network of people that are now more than ever more aware of &ndash; and more accountable for &ndash; the state of the planet. It is clear that recent human history has imposed an imbalance in ecosystems on Earth. It is sad to stand by while entire species go extinct, knowing that the most beautiful animals on the planet are far from safe, knowing that this generation may be the last to live in a time with elephants in the wild, knowing that wild places may only exist for our children's children in picture books.</p>
+        <p>Pressure on natural habitats is fueling extreme climates and species loss. Human population and technological growth are creating a global network of people that are more aware of &ndash; and more accountable for &ndash; the fragile state of the planet. Now, more than ever.</p>
 
-        <p class="linebreak">Elephants are in a battle for survival. Poaching &ndash; where elephants are killed for their ivory &ndash; has risen at an alarming rate with the emergence and affluence of the middle class in China. Half of the African elephant population has been lost in the last thirty-five years. One hundred thousand elephants have been poached in the last three years alone. There’s less than four hundred thousand left. An average of one hundred elephants are killed for their tusks every day, so it is not hard to do the maths and know where this story is going if we do not change something, somewhere, soon.</p>
+        <p class="linebreak">It is clear that recent human history has imposed an imbalance in ecosystems on Earth. It is unbearably sad to stand by while entire species go extinct, knowing that the most beautiful animals on the planet are far from safe, knowing that this generation may be the last to live in a world with elephants in the wild, knowing that wild places may only exist in picture books for our children's children and so on.</p>
+
+        <p class="linebreak">Elephants are in a constant battle for survival. Poaching &ndash; where elephants are killed for their ivory &ndash; has increased at an alarming rate with the emergence of an affluent middle class in China. Half of the African elephant population has been lost in the last thirty-five years. One hundred thousand elephants have been poached in the last three years alone. There’s less than four hundred thousand left. An average of one hundred elephants are killed for their tusks every day, so it is not hard to see where this story goes if we do not change something, somewhere, soon.</p>
+
+        <p class="linebreak">Satao was one of a few remaining &lsquo;magnificent tuskers&rsquo;.</p>
+
       </div>
-
-      <!-- <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Nature is beautiful, and artists who paint and photograph nature celebrate its gorgeous wonders. Nature, however, has its dark side: suffering and dying are part of reality for all living things. But the rate and degree of this in nature have been augmented by man’s actions, causing an alarming depletion of ecosystems and endangering the survival of entire species.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman. (2010) <em>New Works</em>, Artist's Statement p. 22. Greystone Books.</font></h4>
-      </div> -->
 
       <img alt="" src="../../../inc/img/01/photograph/mark-deeble/2014.satao.dead-and-splayed.png" />
       <p class="text-right gutter-side">Satao, &ldquo;Dead and splayed.&rdquo; (2014) &copy; <a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">Mark Deeble</a></p>
 
       <div>
-        <p>Satao was one of a few remaining &lsquo;magnificent tuskers&rsquo;. The Tsavo bull was killed for his ivory in late May 2014.</p>
+        <p>The Tsavo bull was killed for his ivory in late May 2014.</p>
 
-        <p class="linebreak"><em>Species loss is forever.</em> Still, research in remaining natural strongholds in particular in East Africa suggests actionable and collective solutions. We can come together in support of conservationists working with and within local African communities to sustain and protect vital habitats and migratory routes. <a title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un." href="../"><em>White Elephant</em></a>&mdash;comic book and companion app in part aims to promote the work of select wildlife foundations, organizations, trusts and so on that create positive change in africa for one of the most iconic animals in the world.</p>
+        <p class="linebreak"><em>Species loss is forever.</em> Still, research in remaining natural strongholds in particular in East Africa suggests actionable and collective solutions are possible. We can come together in support of conservationists working with and within local African communities to sustain and protect vital habitats and migratory routes. <a title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un." href="../"><em>White Elephant</em></a>&mdash;a comic book and a companion app in part aims to promote the work of select wildlife foundations, funds, organizations and trusts that create positive change in Africa for this iconic animal.</p>
 
-        <h3 class="linebreak">We Create Change</h3>
-        <p>It is likewise in our power to encourage eco-friendly practices in our communities, to mitigate the collective human impact on the environment, and to live more resourcefully on an individual basis. As we focus on making the best and not simply the most of the land we hold now, we can take the next steps together to make life sustainable for the generations to come. We can help simply by not continuing to be victims of a system that chose short-term, clear-cut-and-run profits over sustainable harvests. We can help by leaving some habitat as wilderness, for earth to have its forests, its jungles, its waterways wherein we may sustain more life than just the city life we know. We can help encourage species to thrive in this way, and in this way we stay very much in touch with the wild places wherein we choose not to exist. It is in this balance that our wilderness encourages human life with clean air and fresh water. The more we are aware of what we have &ndash; and of the value of what we have &ndash; both in terms of community and economy, the more we are going to be aware of what it needs, how it works with us all, and the better we can take care of we have.</p>
+      </div>
 
-        <p class="linebreak"><em>Lust for ivory must end.</em> We can help by simply reconsidering what holds value in our lives, with no example more poignant than the seemingly archaic market for ivory trinkets. The poachers that are killing more than thirty thousand elephants each year are in so doing foregoing long-term ecological and communal benefits in exchange for short-term gain to the benefit of a small group of criminals. In place of such unworthy artifacts as ivory trinkets, we can help by upholding beauty in nature: a wonderful world with elephants.</p>
+      <div class="color quote">
+        <h4><font class="color text-quote">&ldquo;</font><em>Nature is beautiful, and artists who paint and photograph nature celebrate its gorgeous wonders. Nature, however, has its dark side: suffering and dying are part of reality for all living things. But the rate and degree of this in nature have been augmented by man’s actions, causing an alarming depletion of ecosystems and endangering the survival of entire species.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman. (2010) <em>New Works</em>, Artist's Statement p. 22. Greystone Books.</font></h4>
+      </div>
+
+      <div>
+        <h3>Change at Home</h3>
+        <p><em>Change starts at home.</em> It is in our power to encourage eco-friendly practices in our own communities, to help mitigate the collective human impact on the environment on a local scale, and to live more resourcefully on an individual basis. As we focus on making the best, and not simply the most, of the land we hold now, we can take the next steps together to make life sustainable for the generations to come.</p>
+
+        <p class="linebreak">We can help simply by not continuing to uphold a system that chooses short-term, clear-cut-and-run profits over sustainable harvests. We can help by leaving some habitats as wilderness. We need to help by saving space for forests and jungles and waterways. Earth needs to have ecosystems that exist apart from people and away from the cities that have been raised on the natural resources that surround them.</p>
+
+        <p class="linebreak">We can help by working to sustain natural ecosystems at home. We can make our cities less emissive. We can make our industries less of a pollutant. We can make an effort to be less wasteful. From the distance of a city contributing to a global crisis, we can start by striving to build our hometown better. This is one way our cities &ndash; and we the people in them &ndash; can stay in balance with the wild places where we choose not to exist. In so doing&mdash;in saving the wild places on Earth, people stand to benefit immeasurably.</p>
+
+        <p class="linebreak">It is in this balance that our wild places can sustain human life with clean air and fresh water. The more we are aware of what we have &ndash; and of the value of what we have &ndash; both in terms of community and economy, the more we are going to be aware of what these wild places need and the better we can take care of what we have already taken.</p>
+
+        <p class="linebreak"><em>Lust for ivory must end.</em> We can help by simply reconsidering what holds value in our lives. No example is more poignant than the seemingly archaic market for ivory trinkets. The poachers who kill more than thirty-thousand elephants each year forego long-term ecological and communal benefits in exchange for short-term gain to the benefit of a small group of criminals. Instead of such unworthy artifacts as ivory trinkets, we can help by upholding beauty in nature: a wonderful world with elephants.</p>
 
         <p class="linebreak">In the lead up to the release of <em>White Elephant</em>, Animat Habitat aims to research conservation efforts on the ground in Africa, and to maintain a more complete listing of wildlife conservation parks and projects in a section of the website dedicated to information and resources. Here are a sample of summaries of forward-thinking foundations doing positive work for elephants, with an admitted bias to those that have provided further information on the Internet.</p>
       </div>
@@ -82,7 +98,7 @@
 
       <div>
         <h4>David Shepherd Wildlife Foundation</h4>
-        <p>DSWF fund anti-poaching teams and undercover investigations into criminal networks, “to protect wildlife species and to establish a sustainable future for them in the wild.” David Shepherd and other leading wildlife artists sell <a title="David Shepherd / Shop" href="../../../url/-org/davidshepherd-shop/" target="_blank" rel="noopener">prints and gift cards</a> on the site to help fund the foundation. Good idea!<sup>&nbsp;[<a class="button" onclick="fn();" title="DSWF">2</a>]</sup></p>
+        <p>DSWF fund anti-poaching teams and undercover investigations into criminal networks, &ldquo;to protect wildlife species and to establish a sustainable future for them in the wild.&rdquo; David Shepherd and other leading wildlife artists sell <a title="David Shepherd / Shop" href="../../../url/-org/davidshepherd-shop/" target="_blank" rel="noopener">prints and gift cards</a> on the site to help fund the foundation. Good idea!<sup>&nbsp;[<a class="button" onclick="fn();" title="DSWF">2</a>]</sup></p>
 
       </div>
 
@@ -94,7 +110,7 @@
 
       <div>
         <h4>Elephant-Human Relations Aid</h4>
-        <p>EHRA enables volunteers to reduce conflict between elephants and humans through movement monitoring, data management, water protection and education programs. The <a title="EHRA / Desert Elephants, Namibia" href="../../../url/-org/ehranamibia-elephant-conservation/" target="_blank" rel="noopener">Namibia</a>-based team take great interest in the desert elephants, and if you too are ready for an adventure in the Africa: <a title="EHRA / Wildlife Volunteer" href="../../../url/-org/ehranamibia-volunteer-with-elephants-namibia/" target="_blank" rel="noopener">volunteer</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="EHRA">4</a>]</sup></p>
+        <p>EHRA enables volunteers to reduce conflict between elephants and humans through movement monitoring, data management, water protection and education programs. The <a title="EHRA / Desert Elephants, Namibia" href="../../../url/-org/ehranamibia-elephant-conservation/" target="_blank" rel="noopener">Namibia-based</a> team take great interest in the desert elephants, and if you too are ready for an adventure in the Africa: <a title="EHRA / Wildlife Volunteer" href="../../../url/-org/ehranamibia-volunteer-with-elephants-namibia/" target="_blank" rel="noopener">volunteer</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="EHRA">4</a>]</sup></p>
 
       </div>
 
