--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -118,7 +118,7 @@
 
       <div class="desktop-feature">
         <div class="clear ptych-center">
-          <img alt="" src="../../../inc/img/01/hands.off.png" />
+          <img alt="" src="../../../inc/img/01/logo/hands-off.png" />
           <p class="text-right">Hands Off Our Elephants &copy; Wildlife Direct [<a href="../../../url/-org/wildlifedirect-hands-off-our-elephants/" rel="noopener" target="_blank" title="Wildlife Direct / Hands Off Our Elephants">wildlifedirect.org</a>, recolored]</p>
 
         </div>
@@ -152,7 +152,7 @@
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../elephant-conservation/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">A History of Elephant Conservation /</font></a>
-          <a class="nav-next" href="../book-of-ella-4/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Book of Ella Ch.&nbsp;4</font></a>
+          <a class="nav-next" href="../book-of-ella-3/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Book of Ella Ch.&nbsp;3</font></a>
         </div>
       </div>
 
