--- a/scene/one/elephant-conservation-nairobi/index.html
+++ b/scene/one/elephant-conservation-nairobi/index.html
@@ -56,7 +56,7 @@
 
         <div class="clear text-center">
           <div class="quote quarter">
-            <img alt="" src="../../../inc/img/01/swt.1977.png" />
+            <img alt="" src="../../../inc/img/01/logo/swt.1977.png" />
           </div>
 
         </div>
