--- a/scene/one/elephant-history/index.html
+++ b/scene/one/elephant-history/index.html
@@ -75,7 +75,7 @@
         <div class="quote" id="footnotes">
           <p class="small"><sup>1</sup> Shoshani, J. (2005) &ldquo;Order Proboscidea.&ldquo; In Wilson, D. E.; Reeder, D. M (eds.). <em>Mammal Species of the World: A Taxonomic and Geographic Reference</em>, Vol. 1 (3rd ed.). Johns Hopkins University Press. ISBN 9780801882210. <a href="../../../url/-org/worldcat-mammal-species-of-the-world/" title="Online Computer Library Center / 62265494" target="_blank" rel="noopener">Website Link</a></p>
           <p class="small"><sup>2</sup> Larramendi, A. (2016) &ldquo;Shoulder height, body mass and shape of proboscideans.&rdquo; <em>Acta Palaeontologica Polonica</em>. <a href="../../../url/-pl/pan-app-001362014/" title="Acta Palaeontologica Polonica / 00136.2014" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>3</sup> Campos-Arceiz, A.; Blake, S. (2011) &ldquo;Mega-gardeners of the forest – the role of elephants in seed dispersal.&rdquo; <em>Acta Oecologica</em>. Vol. 37, Issue 6. <a href="../../../url/www/sciencedirect-S1146609X11000154/" title="Acta Oecologica / 2011.01.014" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>3</sup> Campos-Arceiz, A.; Blake, S. (2011) &ldquo;Mega-gardeners of the forest &ndash; the role of elephants in seed dispersal.&rdquo; <em>Acta Oecologica</em>. Vol. 37, Issue 6. <a href="../../../url/www/sciencedirect-S1146609X11000154/" title="Acta Oecologica / 2011.01.014" target="_blank" rel="noopener">Website Link</a></p>
           <p class="small"><sup>4</sup> Sukumar, R. (2003). &ldquo;The Living Elephants: Evolutionary Ecology, Behaviour, and Conservation.&rdquo; <em>Oxford University Press</em>, USA. ISBN 9780195107784. <a href="../../../url/-org/worldcat-living-elephants/" title="Online Computer Library Center / 935260783" target="_blank" rel="noopener">Website Link</a></p>
           <p class="small"><sup>5</sup> Kingdon, J. et al. (2013) &ldquo;Mammals of Africa.&rdquo; <em>Bloomsbury</em>. ISBN 9781408189962. <a href="../../../url/re/mammals-of-africa-vol-i-vi/" title="Research Gate / Mammals of Africa, Volumes I-VI" target="_blank" rel="noopener">Website Link</a></p>
 
@@ -186,7 +186,7 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../making-of-ella-4/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Making of Ella Ch.&nbsp;4 /</font></a>
+          <a class="nav-previous" href="../making-of-ella-3/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Making of Ella Ch.&nbsp;3 /</font></a>
           <a class="nav-next" href="../technology-documentary-lens/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Wildlife Cinematography</font></a>
         </div>
       </div>
