--- a/scene/one/making-of-ella-2/index.html
+++ b/scene/one/making-of-ella-2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src www.vimeo.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -37,51 +37,23 @@
   <section>
     <article>
       <div>
-        <h4 class="letterhead thin">March 2014</h4>
-        <h2 class="scene-one">Making of Ella Ch.&nbsp;2: Kick-off</h2>
+        <h4 class="letterhead thin">December 2016</h4>
+        <h2 class="scene-one">Making of Ella Ch.&nbsp;2: Pre-visualization</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat</h5>
-
-        <p class="linebreak"><em>The journey begins with an African elephant: every year she followed in the footsteps of her herd along the long migration routes to water, until one dry season when all the footprints had faded away, and she had to find her own way across a sea of sand.</em></p>
-
-        <h3 class="linebreak">An Indie Project</h3>
-        <p><em>I think I kicked-off an indie art studio.</em> I started to figure out &ndash; to put into practice, and here into words &ndash; what it means to start a studio: I started the year with no day job, instead I have purchased professional computer hardware and have licensed professional animation and design software so that I may produce commercial computer graphic art, which in turn may foster support for wildlife conservation.</p>
-
-        <p class="linebreak">An education in information technology (IT), then a profession of technical animation &ndash; each commanded an appreciation for the underlying architecture of the software tools that enable artists to create art on the computer. An artist at heart sees the lines between practical and inspirational resources become blurred &ndash; <em>pixelated</em> &ndash; in the digital space. For example, a Wacom tablet is a beautiful thing. I have used a Wacom tablet almost every day since 2010 to create the art that I love.&#42;</p>
-
-        <p class="linebreak">Like a contribution made in support of an inspiring artist or work of art, an investment in a computer graphic studio suite has been a price that I have justified in pursuit of that which has inspired me. My first few years working <em>professionally</em> have helped to fund this studio overhead, with the added benefit of some perspective to take on this challenge: to <em>start-up</em>. I enjoyed being part of a small animation team, forerunning an in-house design team, as well as bouncing ideas around with the development and the marketing teams, however, I regretted too often that the applications we made may have better communicated the uniquely interactive capacity of the technology that the company was challenged &ndash; and positioned &ndash; to pioneer.</p>
-
-        <p class="linebreak">Indie projects are the opposite of a glossy commercial product; they represent a single, personal vision. When our focus shifts from serving a mass-audience to the individual experience, we encourage vulnerabilities within the art form that allow connection with an audience on a personal level. My passion is wildlife art, and I believe that illustrating beauty in nature through the lens of interactive media can give rise to an unprecedented voice in support of wildlife conservation.</p>
-
-        <!-- Les projets ind&eacute;pendants sont &agrave; l'oppos&eacute; d'un produit commercial poli; ils repr&eacute;sentent une vision uniquement personnelle. Lorsque notre attention se d&eacute;place de servir une audience de masse &agrave; l'exp&eacute;rience individuelle, nous encourageons les vuln&eacute;rabilit&eacute;s au sein de la forme d'art qui permettent une connexion avec le spectateur &agrave; un niveau personnel. -->
-
-      </div>
-
-      <img alt="White Elephant graphic: change. (2013) &copy; Animat Habitat" src="../../../inc/img/oafa-01.cover.banner.jpg" />
-
-      <div>
-        <p>And so I'm illustrating a journey with an elephant&mdash;for elephants, for everyone.</p>
-
-        <p class="linebreak">A small team have volunteered time and talent to help me tell her story. Simply, a developer to write the code and a singer-songwriter to write the score. Namely Mai el-Awini, formerly my co-worker and lead developer at Current Labs, has contributed key creative input from an early stage, as the project developed from an animation to an interactive application, or app. And the piano and the rest of the score that relates so much of the emotion and progression of the character in motion-picture is to be written by Brianna Clarke, recorded for the original animation and with a revised edit to be modularized and integrated in the final app.</p>
-
-        <p class="linebreak">Showcasing elephants in this interactive capacity only comes with the commitment of people behind the scenes, and with still more costs than hardware, software, time and energy. But ideally, any revenue from published art of elephants is dedicated to funding the conservation of elephants in the wild. So, crowdfunding a piece of this project may create an opportunity to reward the effort of the artists &ndash; as well as to further the story for elephants, for everyone. The idea is to invite people to champion the project&mdash;to ask people to pre-order a copy of a digital or printed edition of the <em>White Elephant</em> comic book and in so doing fund a limited edition print run. A small surplus of copies may create an opportunity to balance project costs. They say you have to build a crowd first before you can crowdfund a dream, so I have kicked-off a project broadcast and invite everyone interested in art and design, and elephants to get behind the scenes.</p>
-      </div>
-
-      <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>If you have an idea, and it’s a passion of yours, and you need money to bring that idea to life, [&hellip;] Kickstarter allows you to fund that by attracting people who share that dream with you, and who donate money to your project so that that dream can come to life.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Richard Bliss. (2011) <em>Fund the Dream on Kickstarter</em>, e/1: &lsquo;Funding the Dream on Kickstarter&rsquo;</font></h4>
       </div>
 
       <div>
-        <p>If you search: how to fund a dream, you may quickly come across Kickstarter and if that company name sounds synonymous with crowdfunding to you, it is because Kickstarter is to online crowdfunding what Kleenex is to tissue paper. Online platforms are now more than ever accessible to artists&mdash;to share project goals, along with a series of rewards, so that anyone with that common interest may pledge to help realize those goals. Richard Bliss, host of the podcast <em>Fund the Dream</em>, perhaps best summed up what Kickstarter is all about all the way back in episode one as he described it: &ldquo;angel funding for micro-sites.&rdquo;</p>
+        <h3>Pre-visualization</h3>
+        <p>This is an animatic: a pre-visualization of a visual story. The focus is placed on pacing and on a linear sequence of events. This is the <em>White Elephant</em> animatic, with comic book pages and panels fitted to the standard widescreen format. This working timeline for the story serves as a foundation for cinematography and audio engineering and so on.</p>
 
-        <p class="linebreak">I have personally backed several projects on Kickstarter and have been rewarded with authentic connections to passionate artists who are so clearly burning the candle at both ends to make a dream come true. I was admittedly curious about the consumer experience as well, and it may be a good platform for the limited edition print run of a <em>White Elephant</em> comic book. Kickstarter handles the project information while Amazon handles the financial transaction, and between the two they cut out about ten per cent of the revenue generated if, and only if, the project reaches its funding goal. It’s an all-or-nothing kind of deal.</p>
-
-        <p class="linebreak">Three million people pledged &#36;480 million to projects on Kickstarter in 2013. And so I started thinking through my own fund the dream story: with your pledge you've helped me help wildlife helpers help wildlife&hellip; <em>scratch that</em> &ndash; with your pledge, you’ve helped raise awareness for a graphic campaign to change the way we look at wildlife&mdash;elephants, specifically, this time&hellip; specifically elephants this time.</p>
-
-        <p class="linebreak"><em>Okay, for now</em> &ndash; we journey on with an elephant.</p>
       </div>
 
-      <div class="quote" id="footnotes">
-        <p class="small"><sup>1</sup> Gifted to me by my grandmother Millie, along with so much more.</p>
+      <!-- <iframe src="https://player.vimeo.com/video/23769807?color=ffcf60&title=0&byline=0&portrait=0" class="video" frameborder="0" sandbox="allow-scripts allow-same-origin" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
+
+      <div class="matte"><h4 class="color">Video coming soon.</h4></div>
+
+      <div>
+        <p>Due to an agreement with BBC Motion Gallery and Getty Images, this preview behind the scenes is protected and is published only for members at Animat Habitat. Enter password sent with confirmation of membership. <a href="../../../societas/r/" title="Animat Habitat societ&#257;s. Registration. &ndash;&nbsp;Enregistrement.">Not a member</a>?</p>
 
       </div>
 
@@ -111,8 +83,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../making-of-ella/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Making of Ella Ch.&nbsp;1 /</font></a>
-          <a class="nav-next" href="../technology-ar/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ What is Augmented Reality?</font></a>
+          <a class="nav-previous" href="../book-of-ella-3/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Book of Ella Ch.&nbsp;3 /</font></a>
+          <a class="nav-next" href="../making-of-ella-3/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Making of Ella Ch.&nbsp;3</font></a>
         </div>
       </div>
 
@@ -121,7 +93,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2014-2015 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s.</font></p>
+      <p class="small">Copyright &copy; 2016 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s.</font></p>
 
     </div>
 
