--- a/scene/one/making-of-ella-3/index.html
+++ b/scene/one/making-of-ella-3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; frame-src www.vimeo.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -37,25 +37,64 @@
   <section>
     <article>
       <div>
-        <h4 class="letterhead thin">December 2016</h4>
-        <h2 class="scene-one">Making of Ella Ch.&nbsp;3: Animatic</h2>
+        <h4 class="letterhead thin">March 2017</h4>
+        <h2 class="scene-one">Making of Ella Ch.&nbsp;3: Elephant</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat</h5>
       </div>
 
       <div>
-        <h3>Pre-visualization</h3>
-        <p>This is an animatic: a pre-visualization of a visual story. The focus is placed on pacing and on a linear sequence of events. This is the <em>White Elephant</em> animatic, with comic book pages and panels fitted to the standard widescreen format. This working timeline for the story serves as a foundation for cinematography and audio engineering and so on.</p>
+        <h3>Ella, African Savanna Elephant</h3>
+        <p>Elephants are an umbrella species. They are ecosystem engineers. Biodiversity cascades from their presence. Elephants are a keystone species in Africa. The elephant is an iconic symbol of the continent. When we think of Africa, we most often think of elephants. They are a symbol of power and strength, memory and wisdom, good luck and so on. If we as a people are unable, or unwilling, to save the smartest, largest, greatest land-living mammal in the world &ndash; a species that has roamed the earth for millions of years &ndash; then it is unclear what hope remains for other animals. This is where our story begins.</p>
+
+        <p class="linebreak">Meet Ella, the elephant.</p>
 
       </div>
 
-      <!-- <iframe src="https://player.vimeo.com/video/23769807?color=ffcf60&title=0&byline=0&portrait=0" class="video" frameborder="0" sandbox="allow-scripts allow-same-origin" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
-
-      <div class="matte"><h4 class="color">Video coming soon.</h4></div>
+      <img alt="White Elephant character expression sheet. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.character.expression-s.1440.jpg" />
+      <p class="text-right gutter-side"><em>White Elephant</em> character expression sheet. (2015)</p>
 
       <div>
-        <p>Due to an agreement with BBC Motion Gallery and Getty Images, this preview behind the scenes is protected and is published only for members at Animat Habitat. Enter password sent with confirmation of membership. <a href="../../../societas/r/" title="Animat Habitat societ&#257;s. Registration. &ndash;&nbsp;Enregistrement.">Not a member</a>?</p>
+        <p>This expression sheet is an excersize in character development, as well as a guide in part to facial animation.</p>
 
       </div>
+
+      <img alt="White Elephant storyboard p. 8-9. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.story.board.8-9.jpg" />
+      <p class="text-right gutter-side"><em>White Elephant</em> storyboard p. 8-9. (2015)</p>
+
+      <div>
+        <p>A lot of the character animation is able to reference documentary film and stock footage. A little sequence in the story steps outside of the reference material. The more complex and, in this case, less natural sequences of animation start as sketches in a storyboard. Here is Ella's dance in the clouds.</p>
+
+      </div>
+
+      <img alt="White Elephant storyboard p. 9-12. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.story.board.9-12.jpg" />
+      <p class="text-right gutter-side"><em>White Elephant</em> storyboard p. 9-12. (2015)</p>
+
+      <div>
+        <p>Pencil and paper to start the visual development of a visual story. Here is a pencil drawing of Ella after the storm.</p>
+
+      </div>
+
+      <img class="trim" alt="White Elephant sketch: &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.sketch.jpg" />
+      <p class="text-right gutter-side">&ldquo;Ella after the storm.&rdquo; (pencil, 2015)</p>
+
+      <div>
+        <p>Storyboards, color scripts and color keys help to block out and balance the various arcs of a visual story. Visual moments are then resolved into key illustrations that establish a tone and touchstones for the narrative arc. Here is a digital painting of Ella after the storm.</p>
+
+      </div>
+
+      <img class="trim" alt="White Elephant &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.jpg" />
+      <p class="text-right gutter-side">&ldquo;Ella after the storm.&rdquo; (digital paint, 2015) Dane Aleksander</p>
+
+      <div>
+        <p><em>One more thing.</em></p>
+
+        <p class="linebreak">Here is a computer-generated render of Ella after the storm. Ella is created with Autodesk Maya and rendered with Mental Ray.</p>
+
+      </div>
+
+      <!-- <img class="trim" alt="White Elephant render: &lsquo;Ella after the storm.&rsquo; (2019) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.render.jpg" /> -->
+      <div class="matte"><h4 class="color">Image coming soon.</h4></div>
+      <p class="text-right gutter-side lineend">&ldquo;Ella after the storm.&rdquo; (digital image, 2019)</p>
 
       <div class="clear">
         <div id="register-toggle">
@@ -83,8 +122,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../book-of-ella-4/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Book of Ella Ch.&nbsp;4 /</font></a>
-          <a class="nav-next" href="../making-of-ella-4/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Making of Ella Ch.&nbsp;4</font></a>
+          <a class="nav-previous" href="../making-of-ella-2/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Making of Ella Ch.&nbsp;2 /</font></a>
+          <a class="nav-next" href="../elephant-history/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ A History of Elephants &ndash; Preface</font></a>
         </div>
       </div>
 
@@ -93,7 +132,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2016 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s.</font></p>
+      <p class="small">Copyright &copy; 2017 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s.</font></p>
 
     </div>
 
@@ -102,7 +141,6 @@
 </body>
 
 <script type="text/javascript" src="https://js.createsend1.com/javascript/copypastesubscribeformlogic.js"></script>
-
 <script>
   var register_form = document.getElementById( "register" ),
       register_toggle = document.getElementById( "register-toggle" );
