--- a/scene/one/reference-2/index.html
+++ b/scene/one/reference-2/index.html
@@ -37,18 +37,18 @@
   <section>
     <article>
       <div>
-        <h4 class="letterhead thin">November 2014</h4>
+        <h4 class="letterhead thin">December 2014</h4>
         <h2 class="scene-one">Reference Art (cont'd)</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat</h5>
 
         <p class="linebreak"><em>This article is continued from <a href="../reference/" title="Reference for White Elephant">Reference Art &ndash; History</a>. This second page looks at some of the voices and pictures that helped inspire the comic book, companion app and invitation to change the way we look at wildlife&mdash;<a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">White Elephant</a>.</em></p>
 
         <h3 class="linebreak">Art Daydreams</h3>
-        <p>In daydreams of a comic book in summer of 2011 at Games for Change in New York City&mdash;in a slide show where Polaroid-like graphics swiped across the screen, each photo was instead a video that played for its few frames in focus.<sup>&nbsp;[<a class="button" onclick="fn();" title="G4C">2</a>]</sup></p>
+        <p>It was 2011 and I was sitting at the Games for Change conference in New York City. Polaroid-like graphics swiped across the screen, but instead of a bunch of still images, each photo launched a short video clip. The idea for an animated wildlife comic book was born.<sup>&nbsp;[<a class="button" onclick="fn();" title="Games for Change">1</a>]</sup></p>
 
-        <p class="linebreak">Those two-minutes of presentation following four years of study in interactive multimedia and design (IMD) had sparked my imagination, as I began to realize a mixed medium made to showcase the best of art and story. I took note: “animated scenes within [a] comic book.”  Then, I forgot about it. And so I had long since forgotten about that note when the art and story for <em>White Elephant</em> settled naturally in a comic book medium nearly three years later.</p>
+        <p class="linebreak">I wondered how this type of mixed medium could showcase the best of art and story. I took down a note in my journal: &ldquo;animated scenes within [a] comic book.&rdquo; And then I promptly forgot about it while I went back to my 9 to 5 job at a local app development studio.</p>
 
-        <p class="linebreak">In that time &ndash; in the hours before and after a 9 to 5 shift at a local app development studio &ndash; the voices of artists and storytellers accessible on the Web proved influential in keeping my big picture moving forward. Two sources in particular have raised actionable insights for independent artists early on are the <a href="../../../url/www/chrisoatley-podcasts/" rel="noopener" target="_blank" title="Chris Oatley / Artcast"><em>Artcast</em></a> by Chris Oatley and <a href="../../../url/www/leanintoart/" target="_blank" title="Jerzy Drozd and Rob Stenzinger / Lean Into Art"><em>Lean Into Art</em></a> co-hosted by Jerzy Drozd and Rob Stenzinger. Perhaps what is most encouraging &ndash; and what is in common with both podcasts &ndash; is the dedication to sharing and teaching critical thinking about visual storytelling.</p>
+        <p class="linebreak">Since then, the work of several artists and storytellers were influential in keeping my vision for this project moving forward. Two early sources were <a href="../../../url/www/chrisoatley-podcasts/" rel="noopener" target="_blank" title="Chris Oatley / Artcast"><em>Artcast</em></a> by Chris Oatley and <a href="../../../url/www/leanintoart/" target="_blank" title="Jerzy Drozd and Rob Stenzinger / Lean Into Art"><em>Lean Into Art</em></a> co-hosted by Jerzy Drozd and Rob Stenzinger. I appreciated the dedication to sharing and teaching critical thinking about visual storytelling that both of these podcasts had to offer.</p>
 
       </div>
 
@@ -58,12 +58,10 @@
       </div>
 
       <div>
-        <p>You never know when you may spark an idea in another that allows them to take the next step in pursuit of their passion. As I put headphones to my ears, the personal and art-driven audio journal of Chris Oatley’s <em>Artcast</em> opened my eyes to storytelling in comics.</p>
-
-        <p class="linebreak">Inspiring audio archives like these are invaluable resources for silent artists finding their creative voice. In terms of specific breakthroughs on <em>White Elephant</em>, I can point back to the <em>Artcast</em> podcast <a href="../../../url/www/chrisoatley-ep49finefinish/" rel="noopener" target="_blank" title="Chris Oatley / Artcast e/ 49">episode 49</a>: “Projects that Pitch and the Fine Art of Finishing.” The episode just so happened to feature Jerzy Drozd, whose conversation with Chris Oatley encapsulated an ever-growing passion for storytelling in comics&mdash;a theme that transcends the <em>Artcast</em> as well as Drozd’s many podcasts and professions (cartoonist, teacher). Any lack of personal history reading comics is fast overcome by their passion for comic books as an approachable medium for an artist looking to communicate a personal and art directed story.</p>
+        <p>Inspiring audio archives like these are invaluable resources for artists seeking their creative voice. In terms of specific breakthroughs on <em>White Elephant</em>, the <em>Artcast</em> podcast <a href="../../../url/www/chrisoatley-ep49finefinish/" rel="noopener" target="_blank" title="Chris Oatley / Artcast e/ 49">episode 49</a>: <em>Projects that Pitch and the Fine Art of Finishing</em> featured Jerzy Drozd, whose conversation with Chris Oatley encapsulated an ever-growing passion for storytelling in comics&mdash;a theme that transcends the Artcast as well as Drozd’s many podcasts and professions (cartoonist and teacher and so on). Any lack of personal history reading comics is quickly overcome by their passion for comic books. They easily convinced me that comics might be an approachable medium for an artist looking to communicate a personal and art directed story.</p>
 
         <h3 class="linebreak">Art Community</h3>
-        <p>In 2013, I had an amazing opportunity to attend Creative Talent Network Expo (CTN-X)&mdash;a conference packed with inspiring artists and, not coincidentally, a keynote event for Chris Oatley's Oatley Academy who made me feel welcome all the way across the continent in Burbank, CA. It was great to actually meet Chris and company and experience their shared genuine passion for the artist community.</p>
+        <p>In 2013, I had the chance to attend Creative Talent Network Expo (CTN-X)&mdash;a conference packed with inspiring artists and, not coincidentally, a keynote event for Chris Oatley's Oatley Academy. It was great to actually meet Chris and his team, and to experience their shared genuine passion for the artist community.</p>
 
       </div>
 
@@ -73,11 +71,9 @@
       </div>
 
       <div>
-        <p>Another teaching artist and storyteller also at CTN-X, Ryan Woodward had released a near proof of concept for the companion app for <em>White Elephant</em>, unbeknownst to him, of course, and he hit this mixed medium <em>out of the park</em> with an app and animated graphic novel titled <em>Bottom of the Ninth</em>. Ryan Woodward has a uniquely expressive style of animation that is delightful in and of itself. This style is particularly present in one of his most personal works, and one of my personal favorite animations: <em>Thought of You</em>. His artwork and videos describing the journey that lead to the creation of <em>Thought of You</em> in 2010 and then <em>Bottom of the Ninth</em> in 2012 have inspired and trail-blazed my passion for this project.<sup>&nbsp;[<a class="button" onclick="fn();" title="Woodward">2</a>]</sup></p>
+        <p>Another teaching artist and storyteller, Ryan Woodward, was at CTN-X showing his recently released an app and animated graphic novel titled <em>Bottom of the Ninth</em>. Ryan Woodward has a uniquely expressive style of animation that is delightful in and of itself. This style is particularly present in one of his most personal works, and one of my personal favorite animated short films: <em>Thought of You</em> (2010). His artwork and videos describing the journey that lead to the creation of <em>Thought of You</em> in 2010 and then <em>Bottom of the Ninth</em> in 2012 have inspired and trail-blazed my passion for my project <em>White Elephant</em>.<sup>&nbsp;[<a class="button" onclick="fn();" title="Woodward">2</a>]</sup></p>
 
-        <p class="linebreak">At CTN-X, Woodward called attention to the patterns in artistic struggle and ecstasy:  <a title="YouTube / Sesame Street / Don Music, Kermit the Frog" href="../../../url/yt/RrJnzBFzEEY/" target="_blank" rel="noopener">Sesame Street: Don Music, Kermit the Frog</a>. This has served me as a playful reminder to enjoy the experience of doing what I love to do.</p>
-
-        <p class="linebreak">And ya, <em>I draw because I like to.</em></p>
+        <p class="linebreak">At CTN-X, Woodward called attention to the patterns in artistic struggle and ecstasy: <a title="YouTube / Sesame Street / Don Music, Kermit the Frog" href="../../../url/yt/RrJnzBFzEEY/" target="_blank" rel="noopener">Sesame Street: Don Music, Kermit the Frog</a>. This has served me as a playful reminder to enjoy the experience of doing what I love to do. And ya, <em>I draw because I like to.</em></p>
 
       </div>
 
@@ -85,7 +81,9 @@
       <p class="text-right gutter-side"><em>The Lion King</em> (1994) &copy; Disney</p>
 
       <div>
-        <p>Disney animation has at least indirectly inspired most animated pictures, and <em>White Elephant</em> is no exception, with frames that reference sequences from <em>The Lion King</em> (1994). The classic Disney films were also famous for their use of live-action as source material in drawing animals, with footage nearly always available for any animal because of the studio’s film series: <em>True-Life Adventures</em>. <em>The Living Desert</em> (1953) and <em>The Vanishing Prairie</em> (1954) were the first two feature films in this series and, coincidentally, were later promoted as a double-series release with a promotional cover image that shows nature in an art directed graphic style. <em>White Elephant</em> in part takes on a similar graphic design so that the art and the story may be directed to express different bold, clear visual statements.</p>
+        <p>Disney animation has inspired, at least indirectly, most of the world of animation. <em>White Elephant</em> is no exception. I use frames that reference sequences from <em>The Lion King</em> (1994).</p>
+
+        <p class="linebreak">Classic Disney films were famous for their use of live-action as source material in drawing animals, with footage nearly always available for any animal because of the studio’s film series: <em>True-Life Adventures</em>. The first two feature films in this series, <em>The Living Desert</em> (1953) and <em>The Vanishing Prairie</em> (1954) were later promoted as a double-series release with a promotional cover image that shows nature in an art-directed graphic style. <em>White Elephant</em>, in part, takes on a similar graphic design so that the art and story can express different bold, clear visual statements.</p>
       </div>
 
       <div class="clear">
@@ -97,7 +95,7 @@
       </div>
 
       <div>
-        <p>Even some artists known to have inspired Disney animation have too been referenced in the making of <em>White Elephant</em>, in particular the sequential photographs of animal locomotion by Eadweard Muybridge (1830-1904) as well as the drawings of Heinrich Kley (1863-1945). The former innovated the study of the motion of animals. The latter provided a unique interpretation of animals in unusual poses, and Kley's drawings also clearly had an influence on Walt Disney's &ldquo;Dance of the Hours&rdquo; in <em>Fantasia</em> (1940). In particular, Kley's dancing and skating elephants have in part informed the more complex sequences of character animation in <em>White Elephant</em>. In the art of animation, the ability to visualize character anatomy in its stretched states is a key to realize the architecture and the silhouette of an animated character across its range of motion.<sup>&nbsp;[<a class="button" onclick="fn();" title="NGA">3</a>]</sup></p>
+        <p>Several individual artists known to have inspired Disney animation have also been referenced in the making of <em>White Elephant</em>. In particular, I looked at the sequential photographs of animal locomotion by Eadweard Muybridge (1830-1904), who pioneered the photographic study of the motion of animals. I was also inspired by the drawings of Heinrich Kley (1863-1945), who provided a unique interpretation of animals in unusual poses. Kley's drawings had a clear influence on Walt Disney's &ldquo;Dance of the Hours&rdquo; in <em>Fantasia</em> (1940). His drawings of dancing and skating elephants have in part informed the more complex sequences of character animation in <em>White Elephant</em>. The ability to visualize character anatomy in its stretched states was key to my realizing the armature and silhouette of an animated elephant across its range of motion.<sup>&nbsp;[<a class="button" onclick="fn();" title="NGA">3</a>]</sup></p>
       </div>
 
       <div class="clear diptych">
@@ -119,7 +117,8 @@
       </div>
 
       <div>
-        <p>We monumentalize elephants in our culture. We showcase wildlife in our halls, in the case above-right: in a magnificent exhibit in the African Hall of the American Museum of Natural History. While this specific sculpture has had no direct influence on this project, it is an impressive example that serves to demonstrate how we uphold elephants in our culture and yet we are causing them to disappear along with much of our natural world. The monuments and the icons of elephants that are all around us underscore the diverse artistic background that has inspired <em>White Elephant</em> and the goal at Animat Habitat to promote wildlife conservation through art.</p>
+        <p>Images of elephants are all around us. We uphold elephants in culture, and yet we are causing them to disappear along with much of our natural world. The objective at Animat Habitat is to use art and story to promote wildlife conservation. These artists and storytellers and their images in particular have influenced the visual language of <em>White Elephant</em>, the comic book and a companion app.</p>
+
       </div>
 
       <div class="clear">
@@ -159,7 +158,7 @@
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../reference/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Reference Art P.&nbsp;1 /</font></a>
-          <a class="nav-next" href="../companion-app-beta/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Companion App &ndash; Beta</font></a>
+          <a class="nav-next" href="../book-of-ella/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Book of Ella Ch.&nbsp;1</font></a>
         </div>
       </div>
 
