--- a/scene/zero/northern-white-rhinoceros/index.html
+++ b/scene/zero/northern-white-rhinoceros/index.html
@@ -41,7 +41,9 @@
         <h2 class="dark">Northern White Rhinoceros</h2>
         <h5 class="author">Press secretary at Animat Habitat</h5>
 
-        <p class="linebreak"><em>One of the more incomprehensible acts that we humans, as a species, have to face up to is the extirpation of a once thriving group of animals, such as the northern white rhinoceros. Once upon a time&hellip; there were thousands of this subspecies living across Africa. The crisis of poaching that has supplied an illegal trade in rhino horn has made the plight of the northern white rhinoceros particularly devastating.</em></p>
+        <p class="linebreak"><em>One of the more incomprehensible acts that we humans, as a species, have to face up to is the extirpation of a once thriving group of animals, such as the northern white rhinoceros. Once upon a time&hellip; there were thousands of this subspecies living across Africa. The crisis of poaching that has supplied an illegal trade in rhino horn has made the plight of the northern white rhinoceros particularly devastating. Now the next candidates for oblivion.</em></p>
+
+        <!-- William Hornaday, Our Vanishing Wildlife (1913) -->
 
         <!-- Two years after I painted a rhinoceros at N'gorongoro for my international baccalaureate art show&hellip;  -->
 
@@ -51,7 +53,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Not just the keepers but the rangers, too, they spend their lives with these animals, more than they do with their own families. And the moment I saw Jojo Wachira leaning in, and the keepers were saying goodbye to Sudan&hellip; Sudan kind of then leaned his massive heavy head right back into Jojo’s head. To me that was the story. It was not just this story of the last male northern white rhino on the planet dying, it was actually the deep bond that these keepers had, and it became this symbol of what humans can be. In that image, [you can see that] we did this to these animals. Humans are the ones that made this happen. We can be the great destroyer or the best protectors.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Ami Vitale, Nikon Ambassador and National Geographic photo-journalist interviewed on <em>Boots on the Ground</em> (podcast, September 2021)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>Not just the keepers but the rangers, too, they spend their lives with these animals, more than they do with their own families. And the moment I saw Jojo Wachira leaning in, and the keepers were saying goodbye to Sudan&hellip; Sudan kind of then leaned his massive heavy head right back into Jojo’s head. To me that was the story. It was not just this story of the last male northern white rhino on the planet dying, it was actually the deep bond that these keepers had, and it became this symbol of what humans can be. In that image, [you can see that] we did this to these animals. Humans are the ones that made this happen. We can be the great destroyer or the best protectors.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Ami Vitale, Nikon Ambassador and National Geographic photographer interviewed on <em>Boots on the Ground</em> (podcast, September 2021)</font></h4>
 
         <!-- Sept 2 2021 -->
 
@@ -64,7 +66,7 @@
       </div>
 
       <div>
-        <p>Ami Vitale, Nikon Ambassador and National Geographic photo-journalist, was interviewed by Dibblex Lesalon on the Kenya-based podcast <em>Boots on the Ground</em> in September 2021, where she was asked to share the story behind her photographs of Sudan before his death. Vitale has documented a number of wildlife conservation stories in Kenya, perhaps most notably her short film <em>Shaba</em> (2021) tells the story of an elephant in a way to support the foundation of Reteti Elephant Sanctuary. In the interview with Lesalon, Vitale spoke about how Kenya has been doing a lot of things right. She has seen some of the many ways Kenya has been a leader when you look at conservation, with the government committing to conservation and with the community coming together to see value in conservation and so on. &ldquo;There are challenges and a lot of missteps,&rdquo; Vitale acknowledged, &ldquo;but there are also a lot of great lessons to be learned&mdash;there is so much noise in the world, this is a really good time for all of us to take a moment and be quiet&hellip; And listen. Truly listen.&rdquo;<sup>&nbsp;[<a class="button" onclick="fn();" title="Shaba, 2021.">2</a>]</sup></p>
+        <p>Ami Vitale, Nikon Ambassador and National Geographic photographer, was interviewed by Dibblex Lesalon on the Kenya-based podcast <em>Boots on the Ground</em> in September 2021, where she was asked to share the story behind her photographs of Sudan before his death. Vitale has documented a number of wildlife conservation stories in Kenya, perhaps most notably her short film <em>Shaba</em> (2021) tells the story of an elephant in a way to support the foundation of Reteti Elephant Sanctuary. In the interview with Lesalon, Vitale spoke about how Kenya has been doing a lot of things right. She has seen some of the many ways Kenya has been a leader when you look at conservation, with the government committing to conservation and with the community coming together to see value in conservation and so on. &ldquo;There are challenges and a lot of missteps,&rdquo; Vitale acknowledged, &ldquo;but there are also a lot of great lessons to be learned&mdash;there is so much noise in the world, this is a really good time for all of us to take a moment and be quiet&hellip; And listen. Truly listen.&rdquo;<sup>&nbsp;[<a class="button" onclick="fn();" title="Shaba, 2021.">2</a>]</sup></p>
 
       </div>
 
@@ -94,17 +96,9 @@
 
       <div>
         <h3 class="linebreak">Sudan, Najin and Fatu</h3>
-        <p>Once upon a time&hellip; The northern white rhinoceros was found across countries in Africa south of the Sahara. Poaching, intensified by civil wars in the Democratic Republic of Congo and in Sudan, has devastated the rhino population. In the 1960s there were 2,300 northern white rhinoceros remaining. Today there are two. These last survivors are the daughter and granddaughter of Sudan, Najin and her daughter Fatu. They live out their lives in the presence of armed guards at all times.</p>
+        <p>Once upon a time&hellip; The northern white rhinoceros was found across countries in Africa south of the Sahara. Poaching, intensified by civil wars in the Democratic Republic of Congo and in Sudan, has devastated the rhino population. In the 1960s there were 2,300 northern white rhinoceros remaining. Today there are two.</p>
 
-      </div>
-
-      <iframe src="https://player.vimeo.com/video/271847987?color=ffcf60&title=0&byline=0&portrait=0&quality=1080p" class="video" frameborder="0" allow="accelerometer; autoplay; fullscreen; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <p class="text-right gutter-side">&ldquo;Saving The Last Northern White Rhino&rdquo; 360 VR &copy; Black Bean [<a href="../../url/vimeo/blackbean-271847987/" rel="noopener" target="_blank" title="Vimeo / Black Bean / Saving The Last Northern White Rhino 360 VR">vimeo.com</a>]</p>
-
-      <div>
-        <p>Najin and Fatu are mother and daughter. It is no longer possible for the northern white rhinoceros to reproduce naturally. Still some scientists have not given up.</p>
-
-        <p class="linebreak">In August 2020 at Ol Pejeta Conservancy, African Wildlife Foundation funded a program by the Kenya Wildlife Service and scientists from Germany and the Czech Republic to collect eggs from these last two females. And so began an epiloge in the human story of the northern white rhinoceros. The aim is to rewrite the fate of the northern subspecies with a lot of help from the southern white rhinoceros and with a lot of time. Najin was retired from the program 2021.<sup>&nbsp;[<a class="button" onclick="fn();" title="BBC Earth, 2019.">4,5</a>]</sup></p>
+        <p class="linebreak">These last survivors are the daughter and granddaughter of Sudan, Najin and her daughter Fatu. They live out their lives in the presence of armed guards at all times.</p>
 
       </div>
 
@@ -112,6 +106,20 @@
         <h4><font class="color text-quote">&ldquo;</font><em>We watch them every day, looking at extinction. There is nothing much they can do except accept the fate that you have allowed them to be in.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;James Mwenda, ranger at Ol Pejeta conservancy, Kenya</font></h4>
 
       </div>
+
+      <div class="clear">
+        <iframe src="https://player.vimeo.com/video/271847987?color=ffcf60&title=0&byline=0&portrait=0&quality=1080p" class="video-extra" frameborder="0" allow="accelerometer; autoplay; fullscreen; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p class="text-right gutter-side">&ldquo;Saving The Last Northern White Rhino&rdquo; 360 VR &copy; Black Bean [<a href="../../url/vimeo/blackbean-271847987/" rel="noopener" target="_blank" title="Vimeo / Black Bean / Saving The Last Northern White Rhino 360 VR">vimeo.com</a>]</p>
+
+      </div>
+
+      <div>
+        <p>Najin and Fatu are mother and daughter. It is no longer possible for the northern white rhinoceros to reproduce naturally. They are the terminus of a thread that branched off millions of years ago.</p>
+
+        <p class="linebreak">Still some scientists have not given up. In August 2020 at Ol Pejeta Conservancy, African Wildlife Foundation funded a program by the Kenya Wildlife Service and scientists from Germany and the Czech Republic to collect eggs from these last two females. And so began an epiloge in the human story of the northern white rhinoceros. The aim is to rewrite the fate of the northern subspecies with a lot of help from the southern white rhinoceros and with a lot of time. Najin was retired from the program in 2021.<sup>&nbsp;[<a class="button" onclick="fn();" title="BBC Earth, 2019.">4,5</a>]</sup></p>
+
+      </div>
+
 
       <div class="quote" id="footnotes">
         <!-- <p class="small"><sup>1</sup> Sam Anderson. The Last Two Northern White Rhinos On Earth: What will we lose when Najin and Fatu die? New York Times. 2021. <a href="../../../url/www/nytimes-the-last-two-northern-white-rhinos-on-earth/" title="New York Times / The Last Two Northern White Rhinos On Earth" target="_blank" rel="noopener">Website Link</a></p> -->
