--- a/scene/one/book-of-ella/index.html
+++ b/scene/one/book-of-ella/index.html
@@ -36,23 +36,78 @@
 
   <section>
     <article>
+      <img alt="White Elephant graphic: change. (2013) &copy; Animat Habitat" src="../../../inc/img/01/we.cover.banner.jpg" />
+      <p class="text-right gutter-side"><em>White Elephant</em> cover art: CHANGE (2015)</p>
+
       <div>
         <h4 class="letterhead thin">March 2015</h4>
-        <h2 class="scene-one">Book of Ella Ch.&nbsp;1: Cover</h2>
+        <h2 class="scene-one">Book of Ella Ch.&nbsp;1: Cover Story</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat</h5>
       </div>
 
       <div>
-        <p>OAFA&mdash;<em>An edition of the cover art was designed especially to send as personalized <em>thank you</em> cards to those who have supported the art, code and music behind <a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un."><em>White Elephant</em></a>. When the companion app for <em>White Elephant</em> is in the app store, both the digital and the printed version of the cover art will be an image tracker for an <a href="../technology-ar/" title="What is Augmented Reality?">augmented reality</a> (AR) experience. The cards have been printed in limited edition for journeyers who get behind the scenes in wildlife art. This invitation extends to everyone who shares our love for wildlife and a world with elephants.</em></p>
+        <p><em>A story communicates an idea. A story relates another perspective. A story makes life easier to comprehend. Stories help us to learn context, to unearth hidden meanings, and to see patterns in our lives. Stories remind us of where we started and of how we are all connected. Stories can travel through centuries in time, and for a group of people, they exist as a common point of reference. We use stories to examine problems in our community and to exercise constraints of our technology. We are inspired by stories. We change behavior based on stories. Telling stories is the most important thing that we do to communicate with ourselves. Storytelling is what makes us human. We want to hear a story, and we want to be known in a story. We tell a story everyday with our lives.</em></p>
+
       </div>
 
-      <img alt="White Elephant Thank you cards. (2014) &copy; Animat Habitat" src="../../../inc/img/oafa-01.cover.card.banner.jpg" />
+      <div class="color quote">
+        <h4><font class="color">&ldquo;</font><em>Story is all around us; it's everywhere; it's your life. Whatever happens to you throughout the day, throughout the week: that's part of it&mdash;that's part of story. How you live &ndash; and who you are &ndash; is part of the process.</em><font class="color">&rdquo;</font><font class="color thin"> &mdash;&nbsp;Rick del Carmen. (2016) <em>The Bancroft Brothers Animation Podcast</em>, e/64: &lsquo;The Bancroft Bros. talk with the Del Carmen Bros: Animation in the Family.&rsquo; Creative Talent Network (CTN) Burbank, California</font></h4>
+
+      </div>
+
+      <div>
+        <p><em>If the part you play in <em>story</em> is unclear, &lsquo;keep looking, and don't settle.&rsquo; In the words of Steve Jobs in the 2005 commencement address to Stanford University: &ldquo;The only way to do great work is to love what you do. If you haven't found it yet: keep looking, and don't settle.&rdquo; Story can also be entertainment. Story can be an escape: happily forever after. A story exists in its medium, and nonetheless the medium manifests a window back into our world. The story of <a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un."><em>White Elephant</em></a> is, likewise, a reflection of the way our world once was &ndash; and in part still is &ndash; wild.</em></p>
+
+        <h3 class="linebreak">Our Story</h3>
+        <p>Story at Animat Habitat is written in the context of challenges that people must take on today and in future&mdash;in a moment in human history when we have clear cause-and-effect on the state of the natural world. We the people enact our story together. Action!</p>
+
+        <p class="linebreak">This is a story we all must want to be a part of&mdash;a story to save the wild places and the animals that live in them. This is the story Animat Habitat is established to tell. The <em>White Elephant</em> comic book and companion app invites people to change the way we look at elephants.</p>
+
+      </div>
+
+      <img alt="White Elephant app cover art (2014) &copy; Animat Habitat" src="../../../inc/img/01/we.app.art.jpg" />
+      <p class="text-right gutter-side"><em>White Elephant</em> cover art (2015)</p>
+
+      <div>
+        <h3>Cover Art</h3>
+        <p>Elephants are a keystone species in Africa. They are a symbol of the continent. Elephants are also a universal symbol of strength and wisdom. This may be why they appear in the logos of so many corporations, and why projects uniquely focused on such an iconic animal must establish an alternate graphic style in order to stand out from the crowd.</p>
+
+        <p class="linebreak">The cover art for the <em>White Elephant</em> companion app is designed in part to distance itself from the clarity that comes with the line-art and vector graphics that saturate the world of icons and logos and so on. The visual development of the cover art is drawn instead from the texture that appears in the pages of the <em>White Elephant</em> comic book. The image of a sand-covered and partially dissolved silhouette of an elephant distances itself from a corporate interpretation, and moves closer to a graphic abstraction of the plight of elephants in the wild. This cover image better represents the strength and wisdom that is faded, year after year, lost with the tens of thousands of elephants killed for their tusks.</p>
+
+        <p class="linebreak">In a book of photographs of the life cycle of elephants: <em>Remembering Elephants</em> (2016) by Margot Raggett, in the foreword written by Virginia McKenna OBE, founder of Born Free Foundation, the tragedy of the ivory trade is put simply: &ldquo;The life of all elephants simply must have more significance than a small sad fragment of carved tusk on someone's mantelpiece.&lbrdquo;</p>
+
+        <p class="linebreak">The goal of the app and the art of <em>White Elephant</em> is simply to share this message: <em>No one in the world needs an elephant tusk other than an elephant.</em></p>
+
+        <p class="linebreak">Please pass it along.</p>
+
+      </div>
+
+      <img alt="White Elephant Thank you cards. (2014) &copy; Animat Habitat" src="../../../inc/img/01/we.cover.card.banner.jpg" />
+
+      <div>
+        <p><em>And one more thing&hellip;</em></p>
+
+        <p class="linebreak"><em>An edition of the cover art was designed especially to send as personalized thank-you cards to those who have supported the art, code and music behind <em>White Elephant</em>. When the companion app for <em>White Elephant</em> is in the app store, both the digital and the printed version of the cover art will be an image tracker for an <a href="../technology-ar/" title="What is Augmented Reality?">augmented reality</a> (AR) experience. The cards have been printed in limited edition for journeyers who get behind the scenes in wildlife art. This invitation extends to everyone who shares our love for wildlife and a world with elephants.</em></p>
+
+      </div>
+
+      <div class="color quote">
+        <h4><font class="color">&ldquo;</font><em>There’s no cause for alarm. I chopped just one tree. I am doing no harm. I’m being quite useful.</em><font class="color">&rdquo;</font><font class="color thin"> &mdash;&nbsp;Dr Seuss: The Once-ler, <em>The Lorax</em> (1971)</font></h4>
+
+      </div>
 
       <div>
         <h3>Cover Art Cards</h3>
-        <p>It matters that the things we make are meaningful to see, to hear, to touch and so on. Also, it matters that the things we make are responsibly sourced with regard to the use of materials. In the case of a simple card, the type of ink on the type of paper are design choices that manifest in the tactile quality of the art we reproduce in print. And so we made the conservative and more traditional selection of one hundred per cent recycled, uncoated white paper. We prioritized all eco-friendly practices over any aesthetic properties. The brown base color of kraft paper was of particular interest, however, printing on white card-stock offered more dynamic range to more accurately represent the digital artwork in print. The dynamic range is important for creating a high contrast image, and points of high contrast are important for image tracking in AR. The uncoated card-stock is another design choice with a bias to AR &ndash; namely, to the lens of a camera in an iPhone &ndash; as the matte finish of the card-stock helps to reduce glare on the surface of the image.</p>
+        <p>It matters that the things we make are meaningful to see, to hear, to touch and so on. Also, it matters that the things we make are responsibly sourced with regard to the use of materials. In the case of a simple card, the type of ink on the type of paper are design choices that manifest in the tactile quality of an art reproduction in print. And so for this first print campaign at Animat Habitat, the studio has made the conservative and more traditional selection of one hundred per cent recycled, uncoated white paper. This selection prioritized all eco-friendly practices over any aesthetic properties. The brown base color of kraft paper was of particular interest, however, printing on white card-stock offered more dynamic range to more accurately represent the digital artwork in print. The dynamic range is important for creating a high contrast image, and points of high contrast are important for image tracking in augmented reality. The uncoated card-stock is another design choice with a bias to an augmented reality experience &ndash; namely to the lens of a camera in an iPhone &ndash; as the matte finish of the card-stock helps to reduce glare on the surface of the image.</p>
 
-        <p class="linebreak">The limited edition <em>White Elephant</em> cover art card was printed on recycled paper with non-toxic, vegetable-based inks by Green Printer. This Canadian company has communicated an awareness of the impact of the pulp and paper industry, “the third largest industrial polluter of air, water and land in both Canada and the United States.” And so that is why we have considered the card-stock and printing solution to be sent as <em>thank yous</em> for your support. <em>Thank you and you're welcome.</em></p>
+        <p class="linebreak">The limited edition <em>White Elephant</em> cover art card was printed on recycled paper with non-toxic, vegetable-based inks by Green Printer. This Canadian company has communicated an awareness of the impact of the pulp and paper industry, &ldquo;the third largest industrial polluter of air, water and land in both Canada and the United States.&rdquo; And so that is why we, at Animat Habitat, have considered the card-stock and printing solution to be sent as thank-you cards for your support. <em>Thank you fellow journeyers and Truffula trees and so on.</em></p>
+
+        <p class="linebreak">Available while limited editions last. &#47;<a href="../societas/r/" title="Animat Habitat societ&#257;s.">register</a></p>
+
+      </div>
+
+      <div class="color quote">
+        <h4><font class="color">&ldquo;</font><em>I speak for the trees, for the trees have no tongues.</em><font class="color">&rdquo;</font><font class="color thin"> &mdash;&nbsp;Dr Seuss: The Lorax, <em>The Lorax</em> (1971)</font></h4>
 
       </div>
 
@@ -82,8 +137,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../companion-app-beta/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Companion App &ndash; Beta /</font></a>
-          <a class="nav-next" href="../book-of-ella-2/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Book of Ella Ch.&nbsp;2</font></a>
+          <a class="nav-previous" href="../reference-2/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Reference Art P.&nbsp;2 /</font></a>
+          <a class="nav-next" href="../book-of-ella-2/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Book of Ella Ch.&nbsp;2 &ndash; P.&nbsp;1</font></a>
         </div>
       </div>
 
@@ -101,6 +156,7 @@
 </body>
 
 <script type="text/javascript" src="https://js.createsend1.com/javascript/copypastesubscribeformlogic.js"></script>
+
 <script>
   var register_form = document.getElementById( "register" ),
       register_toggle = document.getElementById( "register-toggle" );
