--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -275,13 +275,13 @@
         <h3><a href="elephant-history/"><font class="scene-one">A History of Elephants &ndash; Preface</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="making-of-ella-4/"><font class="scene-one">Making of Ella Ch.&nbsp;4: Elephant</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="making-of-ella-3/"><font class="scene-one">Making of Ella Ch.&nbsp;3: Elephant</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="making-of-ella-3/"><font class="scene-one">Making of Ella Ch.&nbsp;3: Animatic</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="making-of-ella-2/"><font class="scene-one">Making of Ella Ch.&nbsp;2: Preview</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella-4/"><font class="scene-one">Book of Ella Ch.&nbsp;4: Color</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="book-of-ella-3/"><font class="scene-one">Book of Ella Ch.&nbsp;3: Color</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
         <h3><a href="elephant-conservation-kenya/"><font class="scene-one">Elephant Conservation in Kenya</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
@@ -290,19 +290,13 @@
         <h3><a href="elephant-conservation/"><font class="scene-one">A History of Elephant Conservation</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella-3-2/"><font class="scene-one">Book of Ella Ch.&nbsp;3: Comic P.&nbsp;2</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="book-of-ella-2-2/"><font class="scene-one">Book of Ella Ch.&nbsp;2: Comic P.&nbsp;2</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella-3/"><font class="scene-one">Book of Ella Ch.&nbsp;3: Comic P.&nbsp;1</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="book-of-ella-2/"><font class="scene-one">Book of Ella Ch.&nbsp;2: Comic P.&nbsp;1</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella-2/"><font class="scene-one">Book of Ella Ch.&nbsp;2: Story</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
-        <pre class="thin"></pre>
-
-        <h3><a href="book-of-ella/"><font class="scene-one">Book of Ella Ch.&nbsp;1: Cover</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
-        <pre class="thin"></pre>
-
-        <h3><a href="companion-app-beta/"><font class="scene-one">Companion App &ndash; Beta</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="book-of-ella/"><font class="scene-one">Book of Ella Ch.&nbsp;1: Cover Story</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
         <h3><a href="reference-2/"><font class="scene-one">Reference Art &ndash; Imagery</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
@@ -317,10 +311,7 @@
         <h3><a href="technology-ar/"><font class="scene-one">What is Augmented Reality?</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="making-of-ella-2/"><font class="scene-one">Making of Ella Ch.&nbsp;2: Kick-off</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
-        <pre class="thin"></pre>
-
-        <h3><a href="making-of-ella/"><font class="scene-one">Making of Ella Ch.&nbsp;1: Origin</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="making-of-ella/"><font class="scene-one">Making of Ella Ch.&nbsp;1: Source</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
       </div>
