--- a/scene/one/making-of-ella/index.html
+++ b/scene/one/making-of-ella/index.html
@@ -36,43 +36,63 @@
 
   <section>
     <article>
-      <div>
-        <h4 class="letterhead thin">January 2014</h4>
-        <h2 class="scene-one">Making of Ella Ch.&nbsp;1: Origin</h2>
-        <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat</h5>
 
-        <p class="linebreak"><em>Each year, Southern Africa's Kalahari Desert hosts the largest collective land migration on Earth as the Okavango River becomes a vast, inland delta. The afresh flooded swamps welcome an array of intercontinental species to Botswana, none travelling farther than the elephant. Their journey is of epic proportions. For hundreds of miles, spanning several weeks at the peak of dry season, elephants in Africa are on an urgent quest for water. The heat can be insatiable. The dust swirling across the desert floor can shield stragglers from the herd. More than ever the young and the fatigued are in severe risk of dehydration and of being separated from the matriarch elephants who have journeyed across the great plains in dry seasons before.</em></p>
-      </div>
-
-      <img alt="Okavango Delta, Botswana [Landsat 8 Map] (2017) &copy; Descartes Labs" src="../../../inc/img/01/africa-okavango.jpg" />
+      <img alt="Okavango Delta, Botswana [Landsat 8 Map] (2017) &copy; Descartes Labs" src="../../../inc/img/01/geo/africa-okavango.jpg" />
       <p class="text-right gutter-side">Okavango Delta, Botswana. <em>Landsat 8 Map</em> &copy; Descartes Labs</p>
 
       <div>
-        <h3>The Beginning</h3>
-        <p>This all began in the lead up to an international baccalaureate (IB) fine art show in 2007 with a series of wildlife studies. In 2010, a study of elephants reappeared in an animated short&mdash;a student animation at Carleton University that was originally titled “White Elephants” and was produced from concept to composite in the span of the single university term. In short: it was a rough animation, however, I had managed my way through the many technical challenges of the animation pipeline for games and cinematics. In so doing, I had gained an appreciation for the freedom of computer animation to design and tell stories.</p></div>
+        <h4 class="letterhead thin">March 2014</h4>
+        <h2 class="scene-one">Making of Ella Ch.&nbsp;1: Source</h2>
+        <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat</h5>
 
-      <img alt="[Archives] (2010) &copy; Dane Aleksander" src="../../../inc/img/01/2010-we.jpg" />
+        <p class="linebreak"><em>Each year, Southern Africa's Kalahari Desert hosts the largest collective land migration on Earth as the Okavango River becomes a vast, inland delta. The freshly flooded swamps welcome an array of intercontinental species to Botswana. None travel farther than the elephant. The journey for many elephants of southern Africa is of epic proportions. Over hundreds of miles, spanning several weeks at the peak of dry season, the herds are on the move&mdash;on an urgent quest for water. The desert can be insatiable. Dust swirling across the barren landscape can shield stragglers from the herd. More than ever, the young and the fatigued are in severe risk of becoming dehydrated and being separated from the matriarch elephants who have journeyed across the great plains in dry seasons before.</em></p>
+
+        <h3 class="linebreak">The Beginning</h3>
+        <p><em>This is not Pokemon.</em> This is a picture of the pond. Before it was drained and replaced by an arcade that Satoshi Tajiri then visited in its stead, there was a fishing pond where once upon a time…Tajiri had prowled for insects. This is not another imaginary world of creatures as a consolation prize for a paved country-side. This is a portrait of the country-side before the city blossomed. This is art to promote appreciation for &ndash; and awareness of &ndash; the wild animals who have no voice to speak of their wilderness. And this is art to thank you for joining the journey here at the beginning.</p>
+
+        <p class="linebreak"><em>This is where we begin.</em> In 2007, I was completing an International Baccalaureate (IB) degree with a focus on fine-arts. At our show, I presented a series of wildlife studies. In 2010, my wildlife art reappeared in an animated short I had created as part of an Information Technology (IT) bachelor program at Carleton University. That animation was originally titled “White Elephants” and was produced from concept to composite in the span of the single university term. In short: it was a rough animation. I had, however, managed my way through the many technical challenges of the animation pipeline for games and cinematics. In so doing, I gained an appreciation for the power of computer animation to design and tell stories.</p>
+
+        <p class="linebreak">My post-secondary education in interactive multimedia and design and my early work on augmented reality applications kept me busy for a few years thereafter. I was working by day in an augmented reality advertising company and by night, I was rewriting and redesigning the animated short script to apply the interactive capacity of augmented reality in visual storytelling. By the mid-2010s, I had turned all my attention to using these tools for stories about conservation.</p>
+
+        <p class="linebreak">I was excited about the inherent possibilities of augmented reality to help position the viewer as part of the experience, hoping it might impart a sense of responsibility for the story and, more specifically, for the subject of the story&mdash;the elephant.</p>
+
+      </div>
+
+      <img alt="[Archives] (2010) &copy; Dane Aleksander" src="../../../inc/img/01/2010.we.jpg" />
       <p class="text-right gutter-side"><em>Art of White Elephant</em> (2010) &copy; Dane Aleksander</p>
 
       <div>
-        <p>The independent project stirred in the background of professional technical animation and design for augmented reality (AR) applications for a few years thereafter. At night the script was reviewed, rewritten and redesigned to explore a new found interactive capacity of storytelling in AR in the mid 2010s and in a way that may serve the experience of a story about conservation. The choice to empower the viewer with the control that is inherent in AR, was in part a design decision made for the viewer to impart a sense of responsibility unto the story and &ndash; more specifically &ndash; unto the subject of the story: the elephant. This first required that the animation be limited to a collection of shots with different lengths and different aspects, which may then be developed within the framework of an interactive application, or app. An app also has the added advantage of accessibility in a marketplace with a revenue stream for wildlife. All revenue from the app is to be directed into wildlife conservation parks and projects on the ground in Africa.</p>
+        <p><em>The journey begins with an African elephant: every year she followed in the footsteps of her herd along the long migration routes to water, until one dry season when all the footprints had faded away, and she had to find her own way across a sea of sand.</em></p>
 
-        <p class="linebreak">The goal of this work in progress in its various artistic media has always been to present a unique interaction with a moment in the life of an African elephant, which may then extend to its audience a sense of responsibility for the fate of the animal in the wild. Elephants have existed for tens of millions of years. (Humans have existed for two million years.) This art project is about a truly magnificent animal that really exists in the world today, and may not for much longer. This is not <em>Pokemon</em>&mdash;this is a picture of the fishing pond before it was drained and replaced by the arcade that Satoshi Tajiri then visited in its stead; this is an image of the country-side before the city blossomed&mdash;the inspiration for a world of creatures as a consolation prize for the landscape where Tajiri had earlier prowled for insects. This is art to promote appreciation for &ndash; and awareness of &ndash; wildlife that has no voice to protect its wilderness. And this is art to thank you for joining the journey here at <em>the beginning</em>.</p>
+        <h3 class="linebreak">An Indie Project</h3>
+        <p>My first few years working at an advertising agency helped me fund a computer art studio, and gave me the added benefit of some perspective to take on this challenge—to found a not-for-profit art studio. I enjoyed being part of a small animation team, forerunning an in-house design team, and bouncing ideas around with the developers and the executives, however, I often regretted that the work fell short of showing the uniquely interactive capacity of the technology at play.</p>
+
+        <p class="linebreak">In contrast to the glossy commercial products I was helping to promote, indie projects represent a single, personal vision. When a design shifts from serving a mass audience to the individual experience, this encourages vulnerabilities within the art form that allow connection with an audience on a personal level.</p>
+
+        <p class="linebreak">My passion is wildlife art. I believe that illustrating beauty in nature through the lens of interactive media can give rise to an unprecedented voice in support of wildlife conservation. And so I am illustrating a journey with an elephant&mdash;for elephants and for everyone.</p>
+
       </div>
 
       <div class="clear diptych">
         <div class="clear">
-          <img alt="[Archives] &lsquo;Family&rsquo; (2010) &copy; Dane Aleksander" src="../../../inc/img/01/2010-we-family.jpg" />
+          <img alt="[Archives] &lsquo;Family&rsquo; (2010) &copy; Dane Aleksander" src="../../../inc/img/01/2010.we-family.jpg" />
 
         </div>
 
         <div class="clear">
-          <img alt="[Archives] &lsquo;Horizon&rsquo; (2010) &copy; Dane Aleksander" src="../../../inc/img/01/2010-we-horizon.jpg" />
+          <img alt="[Archives] &lsquo;Horizon&rsquo; (2010) &copy; Dane Aleksander" src="../../../inc/img/01/2010.we-horizon.jpg" />
 
         </div>
 
       </div>
-      <p class="text-right gutter-side lineend"><em>Art of White Elephant</em> (2010) &copy; Dane Aleksander</p>
+      <p class="text-right gutter-side"><em>Art of White Elephant</em> (2010) &copy; Dane Aleksander</p>
+
+      <div>
+        <p>My vision for this project has grown from an animated short film to an animated and augmented interactive short story of a moment in the life of an African elephant. I hope this interactivity within the story will extend a sense of responsibility for the fate of the animal in the wild. Elephants have existed for tens of millions of years. (Humans have existed for two million years.) This truly magnificent animal exists in the wild today. That may not be true for much longer.</p>
+
+        <p class="linebreak">And so we begin on a journey with an elephant.</p>
+
+      </div>
 
       <div class="clear">
         <div id="register-toggle">
@@ -100,7 +120,7 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-next" href="../making-of-ella-2/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Making of Ella Ch.&nbsp;2</font></a>
+          <a class="nav-next" href="../technology-ar/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ What is Augmented Reality?</font></a>
         </div>
       </div>
 
